@@ -6,6 +6,7 @@ New features:
 
 Bugs fixed:
 -1946202 getPropQualifier function attempts to free non-malloced mem
+-1928541 sfcb binary interface memory leak on CMGetObjectPath
 
 
 Changes in 1.3.1
