@@ -1,3 +1,9 @@
+2008-05-20 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+    * brokerOs.c, instance.c, support.c
+    Fixed [ 1928541 ] sfcb binary interface memory leak on CMGetObjectPath
+    Changed *alloc's of mutexes to use memAlloc/tracked memory
+
 2008-05-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
     * constClass.c
